# codo

./: Makefile  README.md  pyproject.toml
codo/: __main__.py  core.py  engine.py  mongo.py
tests/: codo.yml
